# wt-cmake-template

./: CMakeLists.txt  test
source/: CMakeLists.txt  main.cpp  strings.xml  strings_ru.xml
